--- a/Projet2_onlinebanking/packages/repositories.config
+++ b/Projet2_onlinebanking/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\TemplateTesting\packages.config" />
+  <repository path="..\TestsAcceptation\packages.config" />
   <repository path="..\TestsFonctionnel_System\packages.config" />
   <repository path="..\TestsUnitaire\packages.config" />
 </repositories>
